# Lottery_numbers

./: .gitignore  CLAUDE.md  HTML example.html  README.md  USER_REQUEST.txt  USER_REQUEST_TH.txt  pyproject.toml
.claude/: settings.local.json
config/: config.toml
dataset/: README.md  lottery_results.csv  lottery_results.sqlite
docs/superpowers/plans/: 2026-06-27-lottery-foundation.md  2026-06-28-live-refresh-and-suggestions.md  2026-06-29-flask-refactor-and-tickets.md
docs/superpowers/specs/: 2026-06-27-lottery-foundation-design.md  2026-06-28-live-refresh-and-suggestions-design.md  2026-06-29-flask-refactor-and-tickets-design.md
scraper/: scrape_myhora.py
src/lottery/: cli.py  config.py
src/lottery/dashboard/: app.py
src/lottery/dashboard/components/: charts.py
src/lottery/data/: models.py  myhora.py  repository.py  updater.py
src/lottery/features/: engineering.py
src/lottery/stats/: digits.py  frequency.py  pairs.py  sequence.py  suggest.py  summary.py
tests/: test_cli.py  test_config.py
tests/dashboard/: test_charts.py
tests/data/: test_myhora.py  test_repository.py  test_updater.py
tests/features/: test_engineering.py
tests/stats/: test_digits.py  test_frequency.py  test_pairs.py  test_sequence.py  test_suggest.py  test_summary.py
